--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
     "name": "node-red-contrib-hexa-ai",
     "version": "0.0.1",
+    "description": "A set of nodes for working with variables. It includes nodes for reading, writing and monitoring variables.",
+    "keywords": [
+        "node-red"
+    ],
+    "licence": "MIT",
     "node-red": {
         "nodes": {
             "warp10": "configurations/warp10.js",
@@ -11,6 +16,6 @@
         }
     },
     "dependencies": {
-        "eventemitter2": "^6.4.9"
+                "eventemitter2": "^6.4.9"
     }
 }
