--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         }
     },
     "dependencies": {
-                "eventemitter2": "^6.4.9"
+        "axios": "^1.5.0",
+        "eventemitter2": "^6.4.9"
     }
 }
